<?xml version="1.0"?>
<package format="2">
  <name>adaptive_obb</name>
  <version>1.0.0</version>
  <description>Methods for constructing an Oriented Bounding Box (OBB) that suits the environment</description>

  <maintainer email="magnufh@stud.ntnu.no">Magnus Flaten Lindefjeld</maintainer>

  <license>TODO</license>
  
  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>planner_common</build_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>pcl_conversions</build_export_depend>
  <build_export_depend>pcl_ros</build_export_depend>
  <build_export_depend>planner_common</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>pcl_ros</exec_depend>
  <exec_depend>planner_common</exec_depend>
  <exec_depend>roscpp</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
